# momsaheli

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  railway.toml  zbpack.toml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  agentfield_agent.py  main.py  settings.py
backend/app/adapters/: __init__.py  actionbook.py  bright_data.py  butterbase.py  evermind.py  llm_cascade.py  resend_email.py  tavily.py  token_router.py
backend/app/agents/: __init__.py  customer_activation_agent.py  customer_leads.py  launch_agent.py  market_scout.py  memory_agent.py  profile_agent.py  reality_compliance.py
backend/app/fixtures/: jenny.json  jessica.json
backend/app/fixtures/cached_scrapes/: ca_cottage_food.json  customer_leads_jenny.json  customer_leads_jessica.json  etsy_kids_lunch_printable.json  etsy_weekend_family_meal_pack.json  foodlocal_jenny.json  poshmark_digital_download_printable.json  poshmark_meal_prep_containers.json  tx_cottage_food.json
backend/app/orchestrator/: __init__.py  runner.py
backend/app/schemas/: __init__.py  action.py  compliance.py  customer_lead.py  evidence.py  launch_packet.py  memory.py  opportunity.py  profile.py  run.py
backend/app/templates/: customer_response.html  launch_page.html
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  NORTH_STAR.md  README.md  pitch_deck.html  pitch_deck.pptx
docs/legacy/: PLAN_LOCKED.md  SPEC.md  START_HERE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActivationPlanView.tsx  AgentTimeline.tsx  BrowserFrame.tsx  ComplianceBlock.tsx  CustomerLeadCard.tsx  EvidenceCard.tsx  LaunchPacketView.tsx  MemoryPanel.tsx  NavBar.tsx  PresetButtons.tsx  SponsorBar.tsx  StatCard.tsx
frontend/src/hooks/: useAgentStream.ts
frontend/src/pages/: History.tsx  Home.tsx  (+1 more)
scripts/: build_deck.py  setup.sh  start.sh
