[project]
name = "momsaheli"
version = "0.1.0"
description = "Mom's Saheli — agent-native economic mobility infrastructure"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
