[project]
name = "momsaheli"
version = "0.1.0"
description = "Mom's Saheli — agent-native economic mobility infrastructure"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.0.0",
    "openai>=1.30.0",
    # --- Live integrations (added Phase 2) ---
    "google-generativeai>=0.8.0",   # Gemini 2.5 Flash via LLM cascade
    "tavily-python>=0.7.0",         # Free SERP / web search (Bright Data stand-in)
    "brightdata-sdk>=1.0.0",        # Activates when BRIGHT_DATA_ZONE is configured
    "agentfield>=0.1.0",            # Sponsor orchestrator (hybrid wrap pending)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
